<resources>
    <string name="app_name">Go rocket, go!</string>
    <string name="gioca_button">Gioca</string>
    <string name="personalizzazione_button">Personalizzazione</string>
    <string name="comandi_button">impostazioni</string>
    <string name="esci_button">Esci</string>
    <string name="preferenze_testo">Personalizza!</string>
    <string name="gameover_nuovo_record">Nuvo record!</string>
    <string name="istruzioni">Evita gli asteroidi facendo muovere il razzo a destra e sinistra con:</string>
    <string name="comando1">Manuale</string>
    <string name="comando2">Accelerometro</string>
    <string name="dettagli_comando_selezionato1">Fai muovere il razzo, spostando il dito sullo schermo</string>
    <string name="dettagli_comando_selezionato2">Fai muovere il razzo, oscillando il dispositivo</string>
    <string name="difficolta1">Facile</string>
    <string name="difficolta2">Medio</string>
    <string name="difficolta3">Difficile</string>
    <string name="scudo_suggerimento">Raccogli gli scudi per essere invulnerabile</string>
</resources>
